--- a/exercises/page-2.html
+++ b/exercises/page-2.html
@@ -3,6 +3,7 @@
 <head>
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Purple Rain</title>
     <title>When Doves Cry</title>
