--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <h3>Sample web<h3>
             <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
-            <p><a href="exercises/page-2.html">A Purple Rain</a></p>
+            <p><a href="exercises/page-2.html">Purple Rain</a></p>
        
 </body>
 
