--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mary Smith - Independent Web and Digital Developer</title>
 <meta name="description" content="Freelance Web and Digital Developer crafting innovative online experiences on the web and social media."><title>Mary Smith - Independent Web and Digital Developer</title>
+<link rel="stylesheet" href="assets/css/global.css">
 </head>
 
 
@@ -21,6 +22,7 @@
         <h3>Sample web<h3>
             <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
             <p><a href="exercises/page-2.html">Purple Rain</a></p>
+            <p><a href="exercises/page-3.html">Lipsum opsem page</a></p>
        
 </body>
 
