--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mary Smith - Independent Web and Digital Developer</title>
+    <title>Ziggy Burnickas - Independent Web and Digital Developer</title>
 <meta name="description" content="Freelance Web and Digital Developer crafting innovative online experiences on the web and social media."><title>Mary Smith - Independent Web and Digital Developer</title>
 <link rel="stylesheet" href="assets/css/global.css">
 </head>
@@ -12,7 +12,7 @@
 
 <body>
     
-    <h1> Well, how are you this is my page about web designing<h1>
+    <h1> Ziggy Burnickas - Independent Web and Digital Developer<h1>
     <h2> You will be guided by me, my name is Ziggy<h2>
 
     
