--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Ziggy Burnickas - Independent Web and Digital Developer</title>
 <meta name="description" content="Freelance Web and Digital Developer crafting innovative online experiences on the web and social media."><title>Mary Smith - Independent Web and Digital Developer</title>
 <link rel="stylesheet" href="assets/global.css">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KRM8W50F2Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KRM8W50F2Z');
+</script>
+
+
 </head>
 
 
