--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Web Page Title</title>
+    <title>Ziggy Burnickas l My work</title>
     <meta name="description" content="Sample web page description goes here.">
 
 	<!-- Preload large image -->
@@ -31,7 +31,7 @@
     <!-- menu and 'hero block' header -->
     <nav class="theme-light"><div class="container-menu">
         <a href="../index.html" class="brand">
-            <img src="website-logo-sample.png" alt="Sample website logo"></a>
+            <img src="project hero/assets/img/My LOGO.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
@@ -128,7 +128,7 @@
  
 	<footer class="theme-dark text-center-desktop text-center-mobile">
 
-		<h2>Mary Smith</h2>
+		<h2>Ziggy Burnickas</h2>
 
 		<h3>Front-end designer and developer</h3>
 
@@ -149,6 +149,17 @@
 	</footer>
 
     <script src="https://lunevedy.com/assets/js/lunevedy.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TS3LSN2BYD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TS3LSN2BYD');
+</script>
+
 
 </body>
 </html>
