--- a/store/index.html
+++ b/store/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store | Mary Smith</title>
+    <title>Ziggy Burnickas l Our Products</title>
     <meta name="description" content="A selection of hand-picked quality books from Amazon to enhance your web design, web development, and digital business skills.">
 
 	<!-- Stylesheets -->
@@ -15,6 +15,17 @@
 
     <!-- Font Awesome 6 icons. Delete if not using. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TS3LSN2BYD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TS3LSN2BYD');
+</script>
+
 
 	<style>
 		/* sets a fixed height on the book images */
@@ -53,7 +64,7 @@
     <!-- navbar start here -->
     <nav class="theme-light"><div class="container-menu">
         <a href="../index.html" class="brand">
-            <img src="../assets/img/website-logo-sample.png" alt="Sample website logo"></a>
+            <img src="assets/img/My LOGO.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
@@ -136,7 +147,7 @@
 
 	<footer class="theme-dark text-center-desktop text-center-mobile">
 
-		<h2>Mary Smith</h2>
+		<h2>Ziggy Burnickas</h2>
 
 		<h3>Front-end designer and developer</h3>
 
@@ -157,6 +168,19 @@
 	</footer>
 
     <script src="https://lunevedy.com/assets/js/lunevedy.js"></script>
+
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TS3LSN2BYD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TS3LSN2BYD');
+</script>
+
 
 </body>
 </html>
