--- a/exercises.html
+++ b/exercises.html
@@ -41,6 +41,20 @@
             <p><a href="exercises/page-8.html">Software Analytics</a></p> 
             <p><a href="exercises/page-9.html">The Box Model</a></p>
             <p><a href="exercises/page-10.html">Web Page With Panels</a></p> 
-</body>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TS3LSN2BYD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TS3LSN2BYD');
+</script>
+
+
+
+
+        </body>
 
 </html>
