--- a/portfolio/multi column/index.html
+++ b/portfolio/multi column/index.html
@@ -75,13 +75,12 @@
 
 			<div class="col-3">
 				<figure class="cols-fig-padding photos-zoom" style="overflow: hidden;">
-					<a href="https://www.etsy.com/ie/listing/1321942855/gin-and-tonic-candle-gift-for-friend?click_key=4cbc3d2bab8566f84e9af9a32875b8d62f421f82%3A1321942855&click_sum=cd5af0fe&ref=shop_home_feat_1"><img src="assets/img/candle-1.jpg" alt="Gin and Tonic Candle"
+					<a href=<a href="https://www.etsy.com/ie/listing/1321942855/gin-and-tonic-candle-gift-for-friend?click_key=4cbc3d2bab8566f84e9af9a32875b8d62f421f82%3A1321942855&click_sum=cd5af0fe&ref=shop_home_feat_1"><img src="assets/img/candle-1.jpg" alt="Gin and Tonic Candle"></a> 
                     </figure>
 
 
-				<h3>Gin and Tonic Candle
-                    €14.91</h3>
-				<p></p>
+				<h3>Gin and Tonic Candle></h3>
+				<p>€14.91</p>
 				<a href="https://www.etsy.com/ie/listing/1321942855/gin-and-tonic-candle-gift-for-friend?click_key=4cbc3d2bab8566f84e9af9a32875b8d62f421f82%3A1321942855&click_sum=cd5af0fe&ref=shop_home_feat_1" class="btn btn-outline btn-pill"><span>Learn more</span><i class="fas fa-arrow-right"></i></a>
 			</div>
 
@@ -89,9 +88,8 @@
 				<figure class="cols-fig-padding photos-zoom" style="overflow: hidden;">
 					<a href="#"><img src="assets/img/candle-2.jpg" alt="Placeholder image"></a>
 				</figure>
-				<h3>Lunevedy Fashion StoreApple Strudel Candle
-                    €14.91</h3>
-				<p></p>
+				<h3>Apple Strudel Candle</h3>
+				<p>€14.91</p>
 				<a href="https://www.etsy.com/ie/listing/1311157158/spiced-apple-strudel-candle-apple?click_key=9b6d5c29805170d90730e20f1e21f1c4749612ff%3A1311157158&click_sum=5763142c&ref=shop_home_active_16" class="btn btn-outline btn-pill"><span>Learn more</span><i class="fas fa-arrow-right"></i></a>
 			</div>
 
@@ -99,9 +97,8 @@
 				<figure class="cols-fig-padding photos-zoom" style="overflow: hidden;">
 					<a href="#"><img src="assets/img/candle-3.jpg" alt="Placeholder image"></a>
 				</figure>
-				<h3>Lavendar Candle
-                    €29.89</h3>
-				<p></p>
+				<h3>Lavendar Candle</h3>
+				<p>€29.89</p>
 				<a href="https://www.etsy.com/ie/listing/1321928809/essential-oil-lavender-candle-gift-for?click_key=9de71b7fca361dfa27631a0858d53d299f048a69%3A1321928809&click_sum=6c05168a&ref=shop_home_active_32" class="btn btn-outline btn-pill"><span>Learn more</span><i class="fas fa-arrow-right"></i></a>
 			</div>
 
