--- a/portfolio/project hero/index.html
+++ b/portfolio/project hero/index.html
@@ -22,6 +22,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&family=Prata&display=swap" rel="stylesheet">
     
+ <!-- Font Awesome 6 icons. Delete if not using. -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 </head>
 
 
@@ -63,7 +67,7 @@
 
         <div class="container-btn reveal-fade-in-header">
             <a href="#" class="btn btn-solid btn-soft"><i class="fa-solid fa-location-dot"></i><span>Tours</span></a>
-            <a href="#" class="btn btn-solid btn-soft"><i class="fa-solid fa-person-biking"></i></i><span>Bikes</span></a>
+            <a href="#" class="btn btn-solid btn-soft"><i class="fa-solid fa-person-biking"></i><span>Bikes</span></a>
         </div>
 
         <div class="container-media">
