--- a/exercises/page-10.html
+++ b/exercises/page-10.html
@@ -21,7 +21,7 @@
 
     <h1>University of Tabi</h1>
 
-    <img src="assets/img/student-computer-screen.jpg" alt="Student at computer screen">
+    <img src="assets/img/arm and computer.jpg" alt="Student at computer screen">
 
     <h2>An innovative institution delivering world-class student experiences since 1975.</h2>
 
