--- a/exercises/page-6.html
+++ b/exercises/page-6.html
@@ -42,7 +42,7 @@
 
 <h2>Cliffs of Moher, Co. Clare</h2>
 
-<img src="assets/img/cliffs-of-moher.jpg" alt="Cliffs of Moher, Co. Clare"
+<img src="assets/img/cliffs-of-moher.jpg" alt="Cliffs of Moher, Co. Clare">
 
 <p>You simply cannot travel to Ireland without paying a visit to the breathtaking <a href="https://www.cliffsofmoher.ie" target="_blank">Cliffs of Moher</a>, situated in County Clare along the Wild Atlantic Way. The Cliffs of Moher have majestically faced the Atlantic for over 350 million years and their beauty is incomparable. The Cliffs are an area of outstanding natural beauty that is recognised as a UNESCO Global Geopark. Also, they are a haven for wildlife. Over 30,000 breeding bird pairs make the Cliffs their home annually, among them guillemots, razorbills, kittiwakes, peregrine falcons and the ever-popular cute puffins.</p>
 
